# commie-scraper

./: README.md  pyproject.toml  scrape.py  targets.csv
.github/workflows/: scrape.yml
data/: 382243789-5954247.json  dyson-v10-vacuum_5118016952-62833587.json  seagate-ironwolf-hdd_382243789-5954247.json
