[tool.poetry]
name = "commie-scraper"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
jq = "^1.2.1"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
black = "^24.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
